# gigaos

./: ARCHITECTURE.md  BASE_LAYER.md  Cargo.toml  HARNESS_SPEC.md  MILESTONE_TEMPLATE.md  NAMING.md  README.md  ROADMAP.md
crates/ai-service/: Cargo.toml
crates/ai-service/src/: lib.rs
crates/harness-bus/: Cargo.toml
crates/harness-bus/src/: lib.rs
crates/nl-terminal/: Cargo.toml
crates/nl-terminal/src/: main.rs
crates/storage-harness/: Cargo.toml
crates/storage-harness/src/: lib.rs
