[workspace]
members = [
    "crates/harness-bus",
    "crates/storage-harness",
    "crates/ai-service",
    "crates/nl-terminal",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GigaAssistant"]
license = "MIT"
repository = "https://github.com/GigaAssistant/gigaos"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
